# openibank

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml  security.yml
crates/openibank-agent-kernel/: Cargo.toml
crates/openibank-agent-kernel/src/: gate.rs  io.rs  kernel.rs  lib.rs  policy.rs  propose.rs  trace.rs
crates/openibank-agent-kernel/tests/: kernel.rs
crates/openibank-agents/: Cargo.toml
crates/openibank-agents/examples/: asset_cycle.rs
crates/openibank-agents/src/: arbiter.rs  brain.rs  buyer.rs  lib.rs  seller.rs
crates/openibank-api/: Cargo.toml
crates/openibank-api/src/: error.rs  extractors.rs  handlers.rs  lib.rs  middleware.rs  openapi.rs  routes.rs  state.rs  websocket.rs
crates/openibank-api/src/dto/: account.rs  auth.rs  common.rs  market.rs  mod.rs  order.rs  wallet.rs
crates/openibank-api/src/handlers/: account.rs  auth.rs  health.rs  market.rs  mod.rs  order.rs  wallet.rs
crates/openibank-api/tests/: api_integration_tests.rs
crates/openibank-audit/: Cargo.toml
crates/openibank-audit/src/: lib.rs
crates/openibank-auth/: Cargo.toml
crates/openibank-auth/src/: api_key.rs  config.rs  error.rs  jwt.rs  lib.rs  middleware.rs  password.rs  rate_limit.rs  session.rs  totp.rs  types.rs
crates/openibank-bridge/: Cargo.toml
crates/openibank-bridge/src/: lib.rs
crates/openibank-capabilities/: Cargo.toml
crates/openibank-capabilities/src/: lib.rs
crates/openibank-clearing/: Cargo.toml
crates/openibank-clearing/proptest-regressions/: netting.txt
crates/openibank-clearing/src/: lib.rs  netting.rs
crates/openibank-cli/: Cargo.toml
crates/openibank-cli/src/: client.rs  display.rs  main.rs
crates/openibank-cli/src/commands/: agent.rs  demo.rs  issuer.rs  mod.rs  receipt.rs  wallet.rs
crates/openibank-core/: Cargo.toml
crates/openibank-core/examples/: permit_failure.rs
crates/openibank-core/src/: commitment.rs  crypto.rs  error.rs  escrow.rs  lib.rs  profile.rs  types.rs  wallet.rs
crates/openibank-crypto/: Cargo.toml
crates/openibank-crypto/src/: hash.rs  keys.rs  lib.rs  signature.rs  vault.rs
crates/openibank-db/: Cargo.toml
crates/openibank-db/migrations/: 001_initial_schema.sql
crates/openibank-db/src/: cache.rs  config.rs  error.rs  lib.rs  models.rs
crates/openibank-db/src/repos/: arena.rs  audit.rs  candle.rs  deposit.rs  market.rs  mod.rs  order.rs  receipt.rs  trade.rs  user.rs  wallet.rs  withdrawal.rs
crates/openibank-demo/: Cargo.toml
crates/openibank-demo/src/: lib.rs
crates/openibank-domain/: Cargo.toml
crates/openibank-domain/src/: amount.rs  arena.rs  card.rs  error.rs  lib.rs
crates/openibank-escrow/: Cargo.toml
crates/openibank-escrow/src/: lib.rs
crates/openibank-guard/: Cargo.toml
crates/openibank-guard/src/: lib.rs
crates/openibank-issuer/: Cargo.toml
crates/openibank-issuer/src/: lib.rs
crates/openibank-ledger/: Cargo.toml
crates/openibank-ledger/src/: lib.rs
crates/openibank-llm/: Cargo.toml
crates/openibank-llm/src/: lib.rs  providers.rs  reasoning.rs  router.rs  types.rs
crates/openibank-maple/: Cargo.toml  MAPLE_API_INVENTORY.md  README.md
crates/openibank-maple/src/: accountability.rs  attention.rs  bridge.rs  commitments.rs  couplings.rs  factory.rs  lib.rs  local_sim.rs  resonator_agent.rs  runtime.rs  traits.rs  worldline.rs
crates/openibank-marketplace/: Cargo.toml
crates/openibank-marketplace/src/: arena.rs  lib.rs  registry.rs  showcase.rs  templates.rs
crates/openibank-palm/: Cargo.toml
crates/openibank-palm/src/: lib.rs
crates/openibank-permits/: Cargo.toml
crates/openibank-permits/src/: lib.rs
crates/openibank-policy/: Cargo.toml
crates/openibank-policy/src/: lib.rs
crates/openibank-receipts/: Cargo.toml
crates/openibank-receipts/src/: lib.rs  main.rs
crates/openibank-sdk/: Cargo.toml
crates/openibank-sdk/src/: lib.rs
crates/openibank-settlement/: Cargo.toml
crates/openibank-settlement/src/: lib.rs
crates/openibank-state/: Cargo.toml
crates/openibank-state/src/: activity.rs  events.rs  lib.rs
crates/openibank-tui/: Cargo.toml
crates/openibank-tui/src/: lib.rs
crates/openibank-types/: Cargo.toml
crates/openibank-types/src/: amount.rs  arena.rs  clearing.rs  commitment.rs  currency.rs  error.rs  escrow.rs  identity.rs  lib.rs  marketplace.rs  permit.rs  receipt.rs  transaction.rs
crates/openibank-ual/: Cargo.toml
crates/openibank-ual/src/: lib.rs
crates/openibank-wallet/: Cargo.toml
crates/resonancex-alerts/: Cargo.toml
crates/resonancex-api/: Cargo.toml
crates/resonancex-arena/: Cargo.toml
crates/resonancex-engine/: Cargo.toml
crates/resonancex-fees/: Cargo.toml
crates/resonancex-history/: Cargo.toml
crates/resonancex-marketdata/: Cargo.toml
crates/resonancex-orderbook/: Cargo.toml
crates/resonancex-trading-bot/: Cargo.toml
crates/resonancex-types/: Cargo.toml
crates/resonancex-ws/: Cargo.toml
docs/: ARCHITECTURE.md  DEMOS.md  GETTING_STARTED.md  OVERVIEW.md  README.md  local-llm.md
docs/api/: README.md
docs/architecture/: SERVICES.md
docs/deployment/: README.md
docs/sdk/: README.md
docs/tutorials/: 01-first-agent.md  02-payments.md  03-receipts.md  04-permits.md  05-escrow.md  06-trading.md  07-arena.md  08-palm.md  09-multi-agent.md  10-security.md  README.md
examples/: asset_cycle.rs
monitoring/: prometheus.yml
scripts/: demo.sh  dev_env.sh  install.sh  run_demo_local_llm.sh
sdks/: README.md
sdks/go/: README.md  client.go  go.mod
sdks/python/: README.md  pyproject.toml
sdks/typescript/: README.md  package.json  tsconfig.json
services/openibank-api-server/: Cargo.toml  Dockerfile  docker-compose.yml  init-db.sql  prometheus.yml
services/openibank-issuer-resonator/: Cargo.toml
services/openibank-marketplace-server/: Cargo.toml
services/openibank-mcp/: Cargo.toml
services/openibank-playground/: Cargo.toml
services/openibank-portal/: Cargo.toml
services/openibank-server/: Cargo.toml
services/openibank-web/: Cargo.toml
services/resonancex-server/: Cargo.toml
(+37 files in other folders)
