[workspace]
resolver = "2"
members = [
    # Foundation layer (zero dependencies on other openibank crates)
    "crates/openibank-types",

    # Core layer
    "crates/openibank-core",
    "crates/openibank-crypto",
    "crates/openibank-ledger",
    "crates/openibank-issuer",

    # Wallet & Permits
    "crates/openibank-wallet",
    "crates/openibank-permits",
    "crates/openibank-escrow",

    # Clearing & Settlement
    "crates/openibank-clearing",
    "crates/openibank-settlement",
    "crates/openibank-bridge",

    # Marketplace & Arena
    "crates/openibank-marketplace",
    "crates/openibank-capabilities",

    # Policy & Audit
    "crates/openibank-policy",
    "crates/openibank-audit",

    # Agent layer
    "crates/openibank-agent-kernel",
    "crates/openibank-llm",
    "crates/openibank-agents",
    "crates/openibank-guard",
    "crates/openibank-receipts",

    # Integration layer
    "crates/openibank-maple",
    "crates/openibank-palm",
    "crates/openibank-ual",
    "crates/openibank-state",

    # Surface layer
    "crates/openibank-sdk",
    "crates/openibank-api",
    "crates/openibank-cli",

    # Services
    "services/openibank-issuer-resonator",
    "services/openibank-playground",
    "services/openibank-mcp",
    "services/openibank-server",

    # ResonanceX Exchange
    "crates/resonancex-types",
    "crates/resonancex-orderbook",
    "crates/resonancex-engine",
    "crates/resonancex-marketdata",
    "crates/resonancex-api",
    "crates/resonancex-ws",
    "crates/resonancex-history",
    "crates/resonancex-arena",
    "crates/resonancex-trading-bot",
    "crates/resonancex-alerts",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/openibank/openibank"
homepage = "https://www.openibank.com/"
authors = ["OpeniBank Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
sled = "0.34"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Environment
dotenvy = "0.15"

# Maple AI Framework (Resonance Architecture)
maple-runtime = { path = "../maple/crates/maple-runtime" }
resonator-types = { path = "../maple/crates/resonator/types" }
rcf-types = { path = "../maple/crates/rcf-types" }
rcf-commitment = { path = "../maple/crates/rcf-commitment" }
aas-types = { path = "../maple/crates/aas-types" }
aas-policy = { path = "../maple/crates/aas-policy" }
aas-service = { path = "../maple/crates/aas-service" }
aas-identity = { path = "../maple/crates/aas-identity" }
aas-capability = { path = "../maple/crates/aas-capability" }
aas-adjudication = { path = "../maple/crates/aas-adjudication" }
aas-ledger = { path = "../maple/crates/aas-ledger" }

# PALM Fleet Orchestration (Maple)
palm-types = { path = "../maple/crates/palm/types" }
palm-registry = { path = "../maple/crates/palm/registry" }
palm-deployment = { path = "../maple/crates/palm/deployment" }
palm-health = { path = "../maple/crates/palm/health" }

# UAL Universal Agent Language (Maple)
ual-types = { path = "../maple/crates/ual-types" }
ual-parser = { path = "../maple/crates/ual-parser" }
ual-compiler = { path = "../maple/crates/ual-compiler" }

# Workspace crates - Foundation
openibank-types = { path = "crates/openibank-types" }

# Workspace crates - Core
openibank-core = { path = "crates/openibank-core" }
openibank-crypto = { path = "crates/openibank-crypto" }
openibank-ledger = { path = "crates/openibank-ledger" }
openibank-issuer = { path = "crates/openibank-issuer" }

# Workspace crates - Wallet & Permits
openibank-wallet = { path = "crates/openibank-wallet" }
openibank-permits = { path = "crates/openibank-permits" }
openibank-escrow = { path = "crates/openibank-escrow" }

# Workspace crates - Clearing & Settlement
openibank-clearing = { path = "crates/openibank-clearing" }
openibank-settlement = { path = "crates/openibank-settlement" }
openibank-bridge = { path = "crates/openibank-bridge" }

# Workspace crates - Marketplace
openibank-marketplace = { path = "crates/openibank-marketplace" }
openibank-capabilities = { path = "crates/openibank-capabilities" }

# Workspace crates - Policy & Audit
openibank-policy = { path = "crates/openibank-policy" }
openibank-audit = { path = "crates/openibank-audit" }

# Workspace crates - Agent
openibank-llm = { path = "crates/openibank-llm" }
openibank-agent-kernel = { path = "crates/openibank-agent-kernel" }
openibank-agents = { path = "crates/openibank-agents" }
openibank-guard = { path = "crates/openibank-guard" }
openibank-receipts = { path = "crates/openibank-receipts" }

# Workspace crates - Integration
openibank-maple = { path = "crates/openibank-maple" }
openibank-palm = { path = "crates/openibank-palm" }
openibank-ual = { path = "crates/openibank-ual" }
openibank-state = { path = "crates/openibank-state" }

# Workspace crates - Surface
openibank-sdk = { path = "crates/openibank-sdk" }
openibank-api = { path = "crates/openibank-api" }

# ResonanceX Exchange crates
resonancex-types = { path = "crates/resonancex-types" }
resonancex-orderbook = { path = "crates/resonancex-orderbook" }
resonancex-engine = { path = "crates/resonancex-engine" }
resonancex-marketdata = { path = "crates/resonancex-marketdata" }
resonancex-api = { path = "crates/resonancex-api" }
resonancex-ws = { path = "crates/resonancex-ws" }
resonancex-history = { path = "crates/resonancex-history" }
resonancex-arena = { path = "crates/resonancex-arena" }
resonancex-trading-bot = { path = "crates/resonancex-trading-bot" }
resonancex-alerts = { path = "crates/resonancex-alerts" }

# Additional dependencies for ResonanceX
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"
crossbeam-channel = "0.5"
flume = "0.11"
parking_lot = "0.12"
tokio-tungstenite = "0.21"
nats = "0.25"
