[package]
name = "openibank-agent-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AgentKernel runtime for OpeniBank agents (policy, propose, gate, trace)"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
openibank-guard = { workspace = true }
openibank-core = { workspace = true }
