[package]
name = "openibank-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST, gRPC, and WebSocket API for OpeniBank"

[dependencies]
openibank-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
