[package]
name = "openibank-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Immutable audit log for OpeniBank"

[dependencies]
openibank-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
