[package]
name = "openibank-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpeniBank Authentication Layer - JWT, API Keys, 2FA, Sessions"

[dependencies]
# Database layer
openibank-db = { workspace = true, features = ["mock"] }
openibank-types = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# JWT
jsonwebtoken = "9.2"

# Password hashing (Argon2id - OWASP recommended)
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"

# HMAC for API key signing (Binance-compatible)
hmac = "0.12"
sha2 = { workspace = true }

# TOTP for 2FA
totp-rs = { version = "5.5", features = ["gen_secret", "otpauth"] }

# Cryptographic randomness
rand = { workspace = true }
base64 = "0.21"
hex = { workspace = true }

# Types
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

# HTTP types
http = "1.0"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"

# IP address parsing
ipnetwork = "0.20"

# Time duration parsing for config
humantime-serde = "1.1"

# URL encoding for TOTP
urlencoding = "2.1"

# Base32 encoding for TOTP secrets
base32 = "0.4"

# SHA-1 for TOTP (most compatible)
sha1 = "0.10"

# Constant-time comparison
subtle = "2.5"

# Secure memory zeroing
zeroize = "1.7"

# SQLx for database types
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
axum-test = "14"
