[package]
name = "openibank-capabilities"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Capability discovery and viral adoption protocol for OpeniBank"

[dependencies]
openibank-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
