[package]
name = "openibank-clearing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transaction clearing with multilateral netting for OpeniBank"

[dependencies]
openibank-types = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = "1.4"
