[package]
name = "openibank-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for OpeniBank - AI Agent Banking"

[[bin]]
name = "openibank"
path = "src/main.rs"

[dependencies]
openibank-domain = { workspace = true }
openibank-demo = { workspace = true }
openibank-maple = { workspace = true }
openibank-tui = { workspace = true }
openibank-wallet = { workspace = true }

# CLI
clap = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
