[package]
name = "openibank-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and wallet primitives for OpeniBank - AI-agent-only banking"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
