[package]
name = "openibank-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpeniBank Database Layer - PostgreSQL + Redis persistence"

[dependencies]
# Core types
openibank-types = { workspace = true }
resonancex-types = { workspace = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "json"] }

# Redis
deadpool-redis = { version = "0.15", features = ["rt_tokio_1"] }
redis = { version = "0.25", features = ["tokio-comp", "json"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Types
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

# Config
dotenvy = "0.15"

[features]
default = []
mock = []

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
