[package]
name = "openibank-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic Maple-driven OpenIBank demo scenario engine"

[dependencies]
openibank-domain = { workspace = true }
openibank-maple = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

