[package]
name = "openibank-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenIBank domain primitives: permits, commitments, receipts, and card rendering"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

