[package]
name = "openibank-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpeniBank domain primitives: IusdAmount, SpendPermit, Receipt, cards, escrow, intents — zero Maple dependency"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
ulid = { workspace = true }
qrcode = "0.14"

[dev-dependencies]
proptest = "1.4"
