[package]
name = "openibank-escrow"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Escrow management for OpeniBank - commitment-gated value movement"

[dependencies]
openibank-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
