[package]
name = "openibank-guard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM output validator for OpeniBank - ensures proposals respect policy"

[dependencies]
openibank-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
