[package]
name = "openibank-issuer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mock IUSD stablecoin issuer for OpeniBank - commitment-gated mint/burn"

[dependencies]
openibank-core = { workspace = true }
openibank-ledger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
