[package]
name = "openibank-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Double-entry ledger for OpeniBank - asset-scoped, Resonator-native"

[dependencies]
openibank-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
