[package]
name = "openibank-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified LLM provider abstraction for OpeniBank - local and cloud"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
