[package]
name = "openibank-marketplace"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Marketplace registry, arena, and showcase engine for OpeniBank"

[dependencies]
openibank-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
