[package]
name = "openibank-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Policy engine and spending controls for OpeniBank"

[dependencies]
openibank-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
