[package]
name = "openibank-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Developer SDK for OpeniBank"

[dependencies]
openibank-types = { workspace = true }
openibank-wallet = { workspace = true }
openibank-permits = { workspace = true }
openibank-escrow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
