[package]
name = "openibank-settlement"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Settlement execution and finality for OpeniBank"

[dependencies]
openibank-types = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
