[package]
name = "openibank-state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified shared state for OpeniBank - connects CLI, Playground, and Dashboard"

[dependencies]
# OpeniBank crates
openibank-core = { workspace = true }
openibank-ledger = { workspace = true }
openibank-issuer = { workspace = true }
openibank-agents = { workspace = true }
openibank-llm = { workspace = true }
openibank-guard = { workspace = true }
openibank-receipts = { workspace = true }
openibank-maple = { workspace = true }

# Maple AI Framework
maple-runtime = { workspace = true }

# Shared deps
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
