[package]
name = "openibank-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ratatui interface for Maple-driven OpenIBank demo"

[dependencies]
openibank-demo = { workspace = true }
openibank-domain = { workspace = true }
openibank-maple = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

